--- a/ms/references.bib
+++ b/ms/references.bib
@@ -8,19 +8,38 @@
   pages = {545--562},
 }
 
+@Article{Bridle-2007,
+  title = {Limits to evolution at range margins: when and why does adaptation fail?},
+  volume = {22},
+  doi = {10.1016/j.tree.2006.11.002},
+  number = {3},
+  journal = {Trends in Ecology \& Evolution},
+  author = {Jon R Bridle and Timothy H Vines},
+  year = {2007},
+  pages = {140--147},
+}
 
-@article{Charrier-2013,
+@Article{Case-2000,
+  title = {Interspecific competition, environmental gradients, gene flow, and the coevolution of species' borders},
+  volume = {155},
+  doi = {10.1086/303351},
+  number = {5},
+  journal = {The American Naturalist},
+  author = {Ted J. Case and Mark L. Taper},
+  year = {2000},
+  pages = {583--605},
+}
+
+@Article{Charrier-2013,
   title = {Evaluation of the impact of frost resistances on potential altitudinal limit of trees},
   volume = {33},
   doi = {10.1093/treephys/tpt062},
   number = {9},
   journal = {Tree Physiology},
-  author = {Charrier, G. and Cochard, H. and Ameglio, T.},
-  month = sep,
+  author = {G. Charrier and H. Cochard and T. Ameglio},
   year = {2013},
-  pages = {891--902}
+  pages = {891--902},
 }
-
 
 @Article{Chave-2006,
   title = {Regional and phylogenetic variation of wood density across 2456 neotropical tree species},
@@ -42,28 +61,26 @@
   pages = {351--366},
 }
 
-@article{Chen-2009,
+@Article{Chen-2009,
   title = {Inter-species variation of photosynthetic and xylem hydraulic traits in the deciduous and evergreen Euphorbiaceae tree species from a seasonally tropical forest in south-western China},
   volume = {24},
   doi = {10.1007/s11284-008-0482-4},
   number = {1},
   journal = {Ecological Research},
-  author = {Chen, Jun-Wen and Zhang, Qiang and Cao, Kun-Fang},
-  month = jan,
+  author = {Jun-Wen Chen and Qiang Zhang and Kun-Fang Cao},
   year = {2009},
-  pages = {65--73}
+  pages = {65--73},
 }
 
-@article{Choat-2011,
+@Article{Choat-2011,
   title = {Xylem traits mediate a trade-off between resistance to freeze-thaw-induced embolism and photosynthetic capacity in overwintering evergreens},
   volume = {191},
   doi = {10.1111/j.1469-8137.2011.03772.x},
   number = {4},
   journal = {New Phytologist},
-  author = {Choat, Brendan and Medek, Danielle E. and Stuart, Stephanie A. and Pasquet-Kok, Jessica and Egerton, John J. G. and Salari, Hooman and Sack, Lawren and Ball, Marilyn C.},
-  month = sep,
+  author = {Brendan Choat and Danielle E. Medek and Stephanie A. Stuart and Jessica Pasquet-Kok and John J. G. Egerton and Hooman Salari and Lawren Sack and Marilyn C. Ball},
   year = {2011},
-  pages = {996--1005}
+  pages = {996--1005},
 }
 
 @Article{Cornwell-2009,
@@ -73,6 +90,16 @@
   author = {William K. Cornwell and David D. Ackerly},
   year = {2009},
   pages = {109--126},
+}
+
+@Article{Doebeli-2003,
+  title = {Speciation along environmental gradients},
+  volume = {421},
+  doi = {10.1038/nature01274},
+  journal = {Nature},
+  author = {Michael Doebeli and U. Dieckmann},
+  year = {2003},
+  pages = {259--264},
 }
 
 @Article{Douma-2011,
@@ -116,30 +143,27 @@
   pages = {\textit{submitted}},
 }
 
-@article{Farrior-2013,
+@Article{Farrior-2013,
   title = {Competition for Water and Light in Closed-Canopy Forests: A Tractable Model of Carbon Allocation with Implications for Carbon Sinks},
   volume = {181},
-  shorttitle = {Competition for Water and Light in Closed-Canopy Forests},
   url = {http://www.jstor.org/stable/10.1086/669153},
   number = {3},
   journal = {The American Naturalist},
-  author = {Farrior, Caroline E. and Dybzinski, Ray and Levin, Simon A. and Pacala, Stephen W.},
+  author = {Caroline E. Farrior and Ray Dybzinski and Simon A. Levin and Stephen W. Pacala},
   year = {2013},
-  pages = {314--330}
+  pages = {314--330},
 }
 
-@article{Fisher-2010,
+@Article{Fisher-2010,
   title = {Assessing uncertainties in a second-generation dynamic vegetation model caused by ecological scale limitations},
   volume = {187},
   doi = {10.1111/j.1469-8137.2010.03340.x},
   number = {3},
   journal = {New Phytologist},
-  author = {Fisher, Rosie and {McDowell}, Nate and Purves, Drew and Moorcroft, Paul and Sitch, Stephen and Cox, Peter and Huntingford, Chris and Meir, Patrick and Ian Woodward, F.},
-  month = aug,
+  author = {Rosie Fisher and Nate  McDowell and Drew Purves and Paul Moorcroft and Stephen Sitch and Peter Cox and Chris Huntingford and Patrick Meir and F. Ian Woodward},
   year = {2010},
-  pages = {666--681}
+  pages = {666--681},
 }
-
 
 @Article{Fortunel-2012,
   title = {Leaf, stem and root tissue strategies across 758 Neotropical tree species},
@@ -180,18 +204,38 @@
   pages = {343--352},
 }
 
-@article{Huston-1987,
+@Article{Goldberg-2006,
+  title = {Ecological and reproductive character displacement on an environmental gradient},
+  volume = {60},
+  doi = {10.1111/j.0014-3820.2006.tb01214.x},
+  number = {7},
+  journal = {Evolution},
+  author = {Emma E. Goldberg and Russell Lande},
+  year = {2006},
+  pages = {1344--1357},
+}
+
+@Article{Huston-1987,
   title = {Plant Succession: Life History and Competition},
   volume = {130},
   doi = {10.2307/2461854},
   number = {2},
   journal = {The American Naturalist},
-  author = {Huston, Michael and Smith, Thomas},
-  month = aug,
+  author = {Michael Huston and Thomas Smith},
   year = {1987},
-  pages = {168--198}
+  pages = {168--198},
 }
 
+@Article{Kirkpatrick-1997,
+  title = {Evolution of a species' range},
+  volume = {150},
+  doi = {10.1086/286054},
+  number = {1},
+  journal = {The American Naturalist},
+  author = {Mark Kirkpatrick and N. H. Barton},
+  year = {1997},
+  pages = {1--23},
+}
 
 @Article{Kooyman-2010,
   title = {Plant functional traits in Australian subtropical rain forest : partitioning within-community from cross-landscape variation},
@@ -213,6 +257,28 @@
   pages = {1291--1299},
 }
 
+@Article{Leimar-2008,
+  title = {Evolution of phenotypic clusters through competition and local adaptation along an environmental gradient},
+  volume = {62},
+  doi = {10.1111/j.1558-5646.2008.00334.x},
+  number = {4},
+  journal = {Evolution},
+  author = {Olof Leimar and Michael Doebeli and Ulf Dieckmann},
+  year = {2008},
+  pages = {807--822},
+}
+
+@Article{Maherali-2004,
+  title = {Adaptive variation in the vulnerability of woody plants to xylem cavitation},
+  volume = {85},
+  url = {http://www.esajournals.org/doi/abs/10.1890/02-0538},
+  number = {8},
+  journal = {Ecology},
+  author = {Hafiz Maherali and William T. Pockman and Robert B. Jackson},
+  year = {2004},
+  pages = {2184--2199},
+}
+
 @Article{Maire-2015,
   title = {Global effects of soil and climate on leaf photosynthetic traits and rates: Effects of soil and climate on photosynthetic traits},
   volume = {24},
@@ -223,57 +289,38 @@
   pages = {706--717},
 }
 
-@article{Maherali-2004,
-	title = {Adaptive variation in the vulnerability of woody plants to xylem cavitation},
-	volume = {85},
-	url = {http://www.esajournals.org/doi/abs/10.1890/02-0538},
-	number = {8},
-	urldate = {2015-07-01},
-	journal = {Ecology},
-	author = {Maherali, Hafiz and Pockman, William T. and Jackson, Robert B.},
-	year = {2004},
-	pages = {2184--2199},
-}
-
-@article{Markesteijn-2011,
+@Article{Markesteijn-2011,
   title = {Hydraulics and life history of tropical dry forest tree species: coordination of species' drought and shade tolerance},
   volume = {191},
-  shorttitle = {Hydraulics and life history of tropical dry forest tree species},
   doi = {10.1111/j.1469-8137.2011.03708.x},
   number = {2},
   journal = {New Phytologist},
-  author = {Markesteijn, Lars and Poorter, Lourens and Bongers, Frans and Paz, Horacio and Sack, Lawren},
-  month = jul,
+  author = {Lars Markesteijn and Lourens Poorter and Frans Bongers and Horacio Paz and Lawren Sack},
   year = {2011},
-  pages = {480--495}
+  pages = {480--495},
 }
 
+@Article{McDowell-2008,
+  title = {Mechanisms of plant survival and mortality during drought: why do some plants survive while others succumb to drought?},
+  volume = {178},
+  doi = {10.1111/j.1469-8137.2008.02436.x},
+  number = {4},
+  journal = {New Phytologist},
+  author = {Nate  McDowell and William T. Pockman and Craig D. Allen and David D. Breshears and Neil Cobb and Thomas Kolb and Jennifer Plaut and John Sperry and Adam West and David G. Williams and Enrico A. Yepez},
+  year = {2008},
+  pages = {719--739},
+}
 
-@article{McDowell-2011,
+@Article{McDowell-2011,
   title = {Mechanisms Linking Drought, Hydraulics, Carbon Metabolism, and Vegetation Mortality},
   volume = {155},
   doi = {10.1104/pp.110.170704},
   number = {3},
   journal = {{PLANT} {PHYSIOLOGY}},
-  author = {{McDowell}, N. G.},
-  month = mar,
+  author = {N. G.  McDowell},
   year = {2011},
-  pages = {1051--1059}
+  pages = {1051--1059},
 }
-
-@article{McDowell-2008,
-  title = {Mechanisms of plant survival and mortality during drought: why do some plants survive while others succumb to drought?},
-  volume = {178},
-  shorttitle = {Mechanisms of plant survival and mortality during drought},
-  doi = {10.1111/j.1469-8137.2008.02436.x},
-  number = {4},
-  journal = {New Phytologist},
-  author = {{McDowell}, Nate and Pockman, William T. and Allen, Craig D. and Breshears, David D. and Cobb, Neil and Kolb, Thomas and Plaut, Jennifer and Sperry, John and West, Adam and Williams, David G. and Yepez, Enrico A.},
-  month = jun,
-  year = {2008},
-  pages = {719--739}
-}
-
 
 @Article{Moles-2014,
   title = {Which is a better predictor of plant traits: temperature or precipitation?},
@@ -305,48 +352,49 @@
   pages = {301--312},
 }
 
-
-@article{Ordonez-2009,
+@Article{Ordonez-2009,
   title = {A global study of relationships between leaf traits, climate and soil measures of nutrient fertility},
   volume = {18},
   doi = {10.1111/j.1466-8238.2008.00441.x},
   journal = {Global Ecology and Biogeography},
-  author = {Ordo{\~n}ez, Jenny C. and van Bodegom, Peter M. and Witte, Jan-Philip M. and Wright, Ian J. and Reich, Peter B. and Aerts, Rien},
-  month = mar,
+  author = {Jenny C. Ordo{\~n}ez and Peter M. van Bodegom and Jan-Philip M. Witte and Ian J. Wright and Peter B. Reich and Rien Aerts},
   year = {2009},
-  pages = {137--149}
+  pages = {137--149},
 }
 
+@Article{Polechova-2005,
+  title = {Speciation through competition: a critical review},
+  volume = {59},
+  doi = {10.1554/04-691},
+  number = {6},
+  journal = {Evolution},
+  author = {Jitka Polechov \'a and Nicholas H. Barton and S. Gavrilefs},
+  year = {2005},
+  pages = {1194--1210},
+}
 
-@article{Poorter-2010,
+@Article{Poorter-2010,
   title = {The importance of wood traits and hydraulic conductance for the performance and life history strategies of 42 rainforest tree species},
   volume = {185},
   doi = {10.1111/j.1469-8137.2009.03092.x},
   number = {2},
   journal = {New Phytologist},
-  author = {Poorter, Lourens and {McDonald}, Imole and Alarc{\'o}n, Alfredo and Fichtler, Esther and Licona, Juan-Carlos and Pe{\~n}a-Claros, Marielos and Sterck, Frank and Villegas, Zulma and Sass-Klaassen, Ute},
-  month = jan,
+  author = {Lourens Poorter and Imole  McDonald and Alfredo Alarc{\'o}n and Esther Fichtler and Juan-Carlos Licona and Marielos Pe{\~n}a-Claros and Frank Sterck and Zulma Villegas and Ute Sass-Klaassen},
   year = {2010},
-  pages = {481--492}
+  pages = {481--492},
 }
 
-
-
-
-@article{Prentice-2014,
+@Article{Prentice-2014,
   title = {Balancing the costs of carbon gain and water transport: testing a new theoretical framework for plant functional ecology},
   volume = {17},
-  shorttitle = {Balancing the costs of carbon gain and water transport},
   doi = {10.1111/ele.12211},
   number = {1},
   journal = {Ecology Letters},
-  author = {Prentice, I. Colin and Dong, Ning and Gleason, Sean M. and Maire, Vincent and Wright, Ian J.},
-  editor = {Penuelas, Josep},
-  month = jan,
+  author = {I. Colin Prentice and Ning Dong and Sean M. Gleason and Vincent Maire and Ian J. Wright},
+  editor = {Josep Penuelas},
   year = {2014},
-  pages = {82--91}
+  pages = {82--91},
 }
-
 
 @Article{Preston-2006,
   title = {Wood density and vessel traits as distinct correlates of ecological strategy in 51 California coast range angiosperms.},
@@ -357,17 +405,24 @@
   pages = {807--18},
 }
 
+@Article{Price-2009,
+  title = {Evolutionarily stable range limits set by interspecific competition},
+  doi = {10.1098/rspb.2008.1199},
+  journal = {Proceedings of the Royal Society of London B: Biological Sciences},
+  author = {Trevor D. Price and Mark Kirkpatrick},
+  year = {2009},
+  pages = {rspb.2008.1199},
+}
 
-@article{Reich-2004,
+@Article{Reich-2004,
   title = {Global patterns of plant leaf N and P in relation to temperature and latitude},
   volume = {101},
   url = {http://www.pnas.org/content/101/30/11001.short},
   journal = {Proceedings of the National Academy of Sciences of the United States of America},
-  author = {Reich, P. B. and Oleksyn, J.},
+  author = {P. B. Reich and J. Oleksyn},
   year = {2004},
-  pages = {11001--11006}
+  pages = {11001--11006},
 }
-
 
 @Article{Reich-2007,
   title = {Predicting leaf physiology from simple plant and climate attributes: A global {GLOPNET} analysis},
@@ -388,106 +443,92 @@
   pages = {13703--13708},
 }
 
-@article{Sakschewski-2015,
+@Article{Sakschewski-2015,
   title = {Leaf and stem economics spectra drive diversity of functional plant traits in a dynamic global vegetation model},
   volume = {21},
   doi = {10.1111/gcb.12870},
   number = {7},
   journal = {Global Change Biology},
-  author = {Sakschewski, Boris and von Bloh, Werner and Boit, Alice and Rammig, Anja and Kattge, Jens and Poorter, Lourens and Pe{\~n}uelas, Josep and Thonicke, Kirsten},
-  month = jul,
+  author = {Boris Sakschewski and Werner von Bloh and Alice Boit and Anja Rammig and Jens Kattge and Lourens Poorter and Josep Pe{\~n}uelas and Kirsten Thonicke},
   year = {2015},
-  pages = {2711--2725}
+  pages = {2711--2725},
 }
 
-@article{Scheiter-2013,
-  title = {Next-generation dynamic global vegetation models: learning from community ecology},
-  volume = {198},
-  shorttitle = {Next-generation dynamic global vegetation models},
-  doi = {10.1111/nph.12210},
-  number = {3},
-  journal = {New Phytologist},
-  author = {Scheiter, Simon and Langan, Liam and Higgins, Steven I.},
-  month = may,
-  year = {2013},
-  pages = {957--969}
-}
-
-@article{Scheiter-2009,
+@Article{Scheiter-2009,
   title = {Impacts of climate change on the vegetation of Africa: an adaptive dynamic vegetation modelling approach},
   volume = {15},
-  shorttitle = {Impacts of climate change on the vegetation of Africa},
   doi = {10.1111/j.1365-2486.2008.01838.x},
   number = {9},
   journal = {Global Change Biology},
-  author = {Scheiter, Simon and Higgins, Steven I.},
-  month = sep,
+  author = {Simon Scheiter and Steven I. Higgins},
   year = {2009},
-  pages = {2224--2246}
+  pages = {2224--2246},
 }
 
-@article{Sitch-2008,
-  title = {Evaluation of the terrestrial carbon cycle, future plant geography and climate-carbon cycle feedbacks using five Dynamic Global Vegetation Models ({DGVMs})},
-  volume = {14},
-  doi = {10.1111/j.1365-2486.2008.01626.x},
-  number = {9},
-  journal = {Global Change Biology},
-  author = {Sitch, S. and Huntingford, C. and Gedney, N. and Levy, P. E. and Lomas, M. and Piao, S. L. and Betts, R. and Ciais, P. and Cox, P. and Friedlingstein, P. and Jones, C. D. and Prentice, I. C. and Woodward, F. I.},
-  month = sep,
-  year = {2008},
-  pages = {2015--2039}
+@Article{Scheiter-2013,
+  title = {Next-generation dynamic global vegetation models: learning from community ecology},
+  volume = {198},
+  doi = {10.1111/nph.12210},
+  number = {3},
+  journal = {New Phytologist},
+  author = {Simon Scheiter and Liam Langan and Steven I. Higgins},
+  year = {2013},
+  pages = {957--969},
 }
-
-
 
 @Article{Simova-2015,
   title = {Shifts in trait means and variances in North American tree assemblages: species richness patterns are loosely related to the functional space},
   doi = {10.1111/ecog.00867},
   journal = {Ecography},
-volume = 38,
-  author = {Irena {{\v S}{\'\i}mov{\'a}} and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
+  volume = {38},
+  author = {Irena {{\v S}{\'\i}mov \'a} and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
   year = {2015},
-  pages = {649--658}
+  pages = {649--658},
 }
 
-@article{Skelton-2015,
+@Article{Sitch-2008,
+  title = {Evaluation of the terrestrial carbon cycle, future plant geography and climate-carbon cycle feedbacks using five Dynamic Global Vegetation Models ({DGVMs})},
+  volume = {14},
+  doi = {10.1111/j.1365-2486.2008.01626.x},
+  number = {9},
+  journal = {Global Change Biology},
+  author = {S. Sitch and C. Huntingford and N. Gedney and P. E. Levy and M. Lomas and S. L. Piao and R. Betts and P. Ciais and P. Cox and P. Friedlingstein and C. D. Jones and I. C. Prentice and F. I. Woodward},
+  year = {2008},
+  pages = {2015--2039},
+}
+
+@Article{Skelton-2015,
   title = {Predicting plant vulnerability to drought in biodiverse regions using functional traits},
   volume = {112},
   doi = {10.1073/pnas.1503376112},
   number = {18},
   journal = {Proceedings of the National Academy of Sciences},
-  author = {Skelton, Robert Paul and West, Adam G. and Dawson, Todd E.},
-  month = may,
+  author = {Robert Paul Skelton and Adam G. West and Todd E. Dawson},
   year = {2015},
-  pages = {5744--5749}
+  pages = {5744--5749},
 }
 
-
-@article{Smith-1989,
+@Article{Smith-1989,
   title = {A theory of the spatial and temporal dynamics of plant communities},
   volume = {83},
   doi = {10.1007/BF00031680},
   number = {1-2},
   journal = {Vegetatio},
-  author = {Smith, Thomas and Huston, Michael},
-  month = oct,
+  author = {Thomas Smith and Michael Huston},
   year = {1989},
-  keywords = {competition,individual-based model,plant functional type,Resource gradient,succession,Tradeoff,Zonation},
-  pages = {49--69}
+  pages = {49--69},
 }
 
-
-@article{Stahl-2014,
+@Article{Stahl-2014,
   title = {Predicting species' range limits from functional traits for the tree flora of North America},
   volume = {111},
   url = {http://www.pnas.org/content/111/38/13739.short},
   number = {38},
   journal = {Proceedings of the National Academy of Sciences},
-  author = {Stahl, Ulrike and Reu, Bj{\"o}rn and Wirth, Christian},
+  author = {Ulrike Stahl and Bj{\"o}rn Reu and Christian Wirth},
   year = {2014},
-  pages = {13739--13744}
+  pages = {13739--13744},
 }
-
 
 @Article{Swenson-2010,
   title = {Plant geography upon the basis of functional traits: an example from eastern North American trees.},
@@ -506,29 +547,27 @@ volume = 38,
   year = {2014},
   pages = {201304551},
 }
-@article{Wright-2002,
+
+@Article{Wright-2002,
   title = {Leaves at low versus high rainfall: coordination of structure, lifespan and physiology},
   volume = {155},
   doi = {10.1046/j.1469-8137.2002.00479.x},
   journal = {New Phytologist},
-  author = {Wright, I. J. and Westoby, M.},
+  author = {I. J. Wright and M. Westoby},
   year = {2002},
-  pages = {403--416}
+  pages = {403--416},
 }
 
-
-@article{Wright-2003,
+@Article{Wright-2003,
   title = {Least-Cost Input Mixtures of Water and Nitrogen for Photosynthesis},
   volume = {161},
   doi = {10.1086/344920},
   number = {1},
   journal = {The American Naturalist},
-  author = {Wright, Ian J. and Reich, Peter B. and Westoby, Mark},
-  month = jan,
+  author = {Ian J. Wright and Peter B. Reich and Mark Westoby},
   year = {2003},
-  pages = {98--111}
+  pages = {98--111},
 }
-
 
 @Article{Wright-2004,
   title = {The world-wide leaf economics spectrum},
@@ -550,6 +589,17 @@ volume = 38,
   pages = {411--421},
 }
 
+@Article{Zavala-2005,
+  title = {A mechanistic model of tree competition and facilitation for Mediterranean forests: Scaling from leaf physiology to stand dynamics},
+  volume = {188},
+  doi = {10.1016/j.ecolmodel.2005.05.006},
+  number = {1},
+  journal = {Ecological Modelling},
+  author = {M.A. Zavala and R. Bravo de la Parra},
+  year = {2005},
+  pages = {76--92},
+}
+
 @Article{vanOmmenKloeke-2012,
   title = {Global quantification of contrasting leaf life span strategies for deciduous and evergreen species in response to environmental conditions},
   volume = {21},
@@ -558,17 +608,4 @@ volume = 38,
   author = {A. E. E. van Ommen Kloeke and J. C. Douma and J. C. Ordo{\~n}ez and P. B. Reich and P. M. van Bodegom},
   year = {2012},
   pages = {224--235},
-}
-
-@article{Zavala-2005,
-  title = {A mechanistic model of tree competition and facilitation for Mediterranean forests: Scaling from leaf physiology to stand dynamics},
-  volume = {188},
-  shorttitle = {A mechanistic model of tree competition and facilitation for Mediterranean forests},
-  doi = {10.1016/j.ecolmodel.2005.05.006},
-  number = {1},
-  journal = {Ecological Modelling},
-  author = {Zavala, M.A. and Bravo de la Parra, R.},
-  month = oct,
-  year = {2005},
-  pages = {76--92}
 }
