--- a/ms/references.bib
+++ b/ms/references.bib
@@ -160,7 +160,7 @@
   doi = {10.1111/j.1469-8137.2010.03340.x},
   number = {3},
   journal = {New Phytologist},
-  author = {Rosie Fisher and Nate  McDowell and Drew Purves and Paul Moorcroft and Stephen Sitch and Peter Cox and Chris Huntingford and Patrick Meir and F. Ian Woodward},
+  author = {Rosie Fisher and Nate McDowell and Drew Purves and Paul Moorcroft and Stephen Sitch and Peter Cox and Chris Huntingford and Patrick Meir and F. Ian Woodward},
   year = {2010},
   pages = {666--681},
 }
@@ -306,7 +306,7 @@
   doi = {10.1111/j.1469-8137.2008.02436.x},
   number = {4},
   journal = {New Phytologist},
-  author = {Nate  McDowell and William T. Pockman and Craig D. Allen and David D. Breshears and Neil Cobb and Thomas Kolb and Jennifer Plaut and John Sperry and Adam West and David G. Williams and Enrico A. Yepez},
+  author = {Nate McDowell and William T. Pockman and Craig D. Allen and David D. Breshears and Neil Cobb and Thomas Kolb and Jennifer Plaut and John Sperry and Adam West and David G. Williams and Enrico A. Yepez},
   year = {2008},
   pages = {719--739},
 }
@@ -317,7 +317,7 @@
   doi = {10.1104/pp.110.170704},
   number = {3},
   journal = {{PLANT} {PHYSIOLOGY}},
-  author = {N. G.  McDowell},
+  author = {N. G. McDowell},
   year = {2011},
   pages = {1051--1059},
 }
@@ -373,13 +373,24 @@
   pages = {1194--1210},
 }
 
+@Article{Pontarp-2015,
+  title = {Adaptation of timing of life history traits and population dynamic responses to climate change in spatially structured populations},
+  volume = {29},
+  doi = {10.1007/s10682-015-9759-6},
+  number = {4},
+  journal = {Evolutionary Ecology},
+  author = {Mikael Pontarp and Jacob Johansson and Niclas Jonz{\'e}n and Per Lundberg},
+  year = {2015},
+  pages = {565--579},
+}
+
 @Article{Poorter-2010,
   title = {The importance of wood traits and hydraulic conductance for the performance and life history strategies of 42 rainforest tree species},
   volume = {185},
   doi = {10.1111/j.1469-8137.2009.03092.x},
   number = {2},
   journal = {New Phytologist},
-  author = {Lourens Poorter and Imole  McDonald and Alfredo Alarc{\'o}n and Esther Fichtler and Juan-Carlos Licona and Marielos Pe{\~n}a-Claros and Frank Sterck and Zulma Villegas and Ute Sass-Klaassen},
+  author = {Lourens Poorter and Imole McDonald and Alfredo Alarc{\'o}n and Esther Fichtler and Juan-Carlos Licona and Marielos Pe{\~n}a-Claros and Frank Sterck and Zulma Villegas and Ute Sass-Klaassen},
   year = {2010},
   pages = {481--492},
 }
@@ -481,7 +492,7 @@
   doi = {10.1111/ecog.00867},
   journal = {Ecography},
   volume = {38},
-  author = {Irena {{\v S}{\'\i}mov \'a} and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
+  author = {Irena {{\v S} {\'\i}mov \'a} and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
   year = {2015},
   pages = {649--658},
 }
