--- a/ms/references.bib
+++ b/ms/references.bib
@@ -268,6 +268,17 @@
   pages = {807--822},
 }
 
+
+@article{Leimar-2013,
+  title = {Limiting similarity, species packing, and the shape of competition kernels},
+  volume = {339},
+  doi = {10.1016/j.jtbi.2013.08.005},
+  journal = {Journal of Theoretical Biology},
+  author = {Leimar, O. and Sasaki, A. and Doebeli, M. and Dieckmann, U.},
+  year = {2013},
+  pages = {3 -- 13}
+}
+
 @Article{Maherali-2004,
   title = {Adaptive variation in the vulnerability of woody plants to xylem cavitation},
   volume = {85},
