change FFW16 to FF16

--- a/ms/literature.tex
+++ b/ms/literature.tex
@@ -57,7 +57,7 @@ gradients}
 
 \item \citet{Moles-2014}: data for 10792 species from 722 sites. LMA decreases with MAP, increases with MAT.
 
-\item \citet{Simova-2015}: across entire Nth American continent, LMA decreasing with MAT and MAP, increasing with degree of seasonality. No significant change in variance. Note patterns with temperature in this study is opposite to all the above results. Also decreases with MAT but increases with degree of seasonality -- is this conflicting?
+\item \citet{Simova-2015}: across entire North American continent, LMA decreasing with MAT and MAP, increasing with degree of seasonality. No significant change in variance. Note patterns with temperature in this study is opposite to all the above results. Also decreases with MAT but increases with degree of seasonality -- is this conflicting?,.  
 
 \item \citet{Laughlin-2012}: Data for nine tree species in the south-west USA across 196 plots,between 2200 and 3600 m altitude, corresponding to a 10 degC range in MAT. LMA decreased with MAT.
 
@@ -85,7 +85,7 @@ gradients}
 
 \item \citet{Laughlin-2012}: Data for nine tree species in the south-west USA across 196 plots,between 2200 and 3600 m altitude, corresponding to a 10 degC range in MAT. Concave-shaped relationship with MAT.
 
-\item \citet{Simova-2014}: across entire Nth American continent. Weak non-significant pattern of WD increasing with MAT, decreasing with MAP, and variance decreasing with MAP (lower variance in high rainfall).
+\item \citet{Simova-2015}: across entire Nth American continent. Weak non-significant pattern of WD increasing with MAT, decreasing with MAP, and variance decreasing with MAP (lower variance in high rainfall).
 
 \item \citet{Chave-2006}: WD for 2456 tree species from Central and South America. Wood density varied over more than one order of magnitude across species, with an overall mean of 0.645 g/cm3. Our geographical analysis showed significant decreases in wood density with increasing altitude and significant differences among low-altitude geographical regions: wet forests of Central America and western Amazonia have significantly lower mean wood density than dry forests of Central and South America, eastern and central Amazonian forests, and the Atlantic forests of Brazil; and eastern Amazonian forests have lower wood densities than the dry forests and the Atlantic forest.
 
