--- a/ms/references.bib
+++ b/ms/references.bib
@@ -502,10 +502,10 @@
   title = {Shifts in trait means and variances in North American tree assemblages: species richness patterns are loosely related to the functional space},
   doi = {10.1111/ecog.00867},
   journal = {Ecography},
-  volume = {38},
-  author = {Irena {{\v S} {\'\i}mov \'a} and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
-  year = {2015},
-  pages = {649--658},
+  volume = 38,
+  author = {Irena Simova and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter Jorgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
+  year = 2015,
+  pages = {649--658}
 }
 
 @Article{Sitch-2008,
